Fixed text size
Fixed wonky text size on lead-a-drive. Paragraphs were too big. nudged
it down to 14px

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -211,6 +211,7 @@ blockquote { line-height: 1.7; color: $white; font-family: "HandOfSeanRegular"; 
 #tipsSuccessfulDrive ul { list-style: none; }
 #tipsSuccessfulDrive ul li { float: left; width: 170px; padding-left: 20px; }
 #tipsSuccessfulDrive ul li.first { padding-left: 0px; }
+div.row.size-fix p { font-size: 14px!important; }
 
 /*Events*/
 .date {
